# upsales-mcp

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
demo/: app.py
demo/static/: app.js  index.html  style.css
src/upsales_mcp/: __init__.py  cache.py  filters.py  serialize.py  server.py  tools.py
tests/: test_cache.py  test_filters.py  test_serialize.py
